@@ -298,138 +298,6 @@ int await_devmap(const char *ident, int present, unsigned timeout_ms)
 }
 
 
-int udev_settle()
-    /*! Allow time for udev events to be processed */
-{   double totdelay = 0.0;
-    time_t starttime;
-#if HAVE_LIBUDEV
-    struct udev *udev_ctx;
-    struct udev_queue *udev_qu;
-#else
-    struct udev_queue_loc *udev_mode;
-    struct stat sbuff;
-#endif
-#if HAVE_NANOSLEEP
-    struct timespec delay;
-#endif
-    int inc_ms = 250, settling = 1;
-    const double timeout = 10.0;
-
-    /* This routine mitigates apparent race-conditions
-     * between udev events which may temporarily take ownership of
-     * and rename newly created devices, thereby causing
-     * other processes to fail if they try to destroy
-     * or reconfigure those devices at the same time.
-     * Whether this is the responsibilty of kernel-level functions
-     * to resolve, or for user applications to mitigate,
-     * is open to debate. */
-
-    time(&starttime);
-
-#if HAVE_LIBUDEV
-    udev_ctx = udev_new();
-    //udev_selinux_init(udev_ctx);
-    udev_qu = udev_queue_new(udev_ctx);
-#else
-    /* Try to find location and type of udev event queue: */
-    udev_mode = udev_queue_locations;
-    while (udev_mode->is_file) {
-        if (stat(udev_mode->path, &sbuff) == 0) break;
-        ++udev_mode;
-    }
-#endif
-
-    /* Keep waiting until there are no more queued udev events: */
-    do {
-#if HAVE_NANOSLEEP
-        delay.tv_sec = inc_ms / 1000;
-        delay.tv_nsec = (inc_ms % 1000) * 1000 * 1000;
-        nanosleep(&delay, NULL);
-#else
-        sleep((unsigned)ceil(inc_ms * 1e-3));
-#endif
-        totdelay += inc_ms * 1e-3;
-        inc_ms += inc_ms / 3;
-
-#if HAVE_LIBUDEV
-        settling = !udev_queue_get_queue_is_empty(udev_qu);
-#else
-        settling = 0;
-        if (udev_mode->is_file) {
-            /* Current versions of udev place events in a single file: */
-            settling |= (udev_queue_size(udev_mode->path) > 0);
-        } else {
-            /* Older versions of udev use a directory of event files: */
-            settling |= udev_active_dir(udev_mode->path, starttime, timeout);
-        }
-#endif  /* HAVE_LIBUDEV */
-    } while (settling && totdelay < timeout);
-
-#if HAVE_LIBUDEV
-    udev_queue_unref(udev_qu);
-    //udev_selinux_exit(udev_ctx);
-    udev_unref(udev_ctx);
-#endif
-
-    return settling;
-}
-
-
-#if !HAVE_LIBUDEV
-
-int udev_queue_size(const char *path)
-    /*! Count number of unprocessed udev events in queue.bin file */
-{   FILE *fp;
-    unsigned long long seqnum;
-    unsigned short skiplen;
-    int nqueued = 0;
-
-    fp = fopen(path, "rb");
-    if (fp == NULL) return 0;
-    if (fread((void*)&seqnum, sizeof(seqnum), (size_t)1, fp) != 1) goto bail_out;
-
-    for (;;) {
-        skiplen = 0;
-        if (fread((void*)&seqnum, sizeof(seqnum), (size_t)1, fp) != 1
-          || fread((void*)&skiplen, sizeof(skiplen), (size_t)1, fp) != 1) break;
-
-        if (skiplen > 0) {
-            void *buff = malloc((size_t)skiplen);
-            nqueued += (fread(buff, (size_t)skiplen, (size_t)1, fp) == 1);
-            free(buff);
-        } else {
-            --nqueued;
-        }
-    }
-
-  bail_out:
-    fclose(fp);
-
-    return nqueued;
-}
-
-
-/*!
- *  Check whether the udev queue directory (e.g. /dev/.udev/queue)
- *  has been recently modified.
- *  This is only relevant to older versions of udev (e.g. 0.105).
- */
-int udev_active_dir(const char *path, time_t starttime, double timeout)
-{   struct stat sbuff;
-    int settling = 0;
-
-    /*  If the event directory exists, then we either have active
-        events, or possibly it is a remnant from an old udev process. */
-
-    if (stat(path, &sbuff) == 0) {
-        settling |= ((starttime - sbuff.st_mtime) < 100 * timeout);
-    }
-
-    return settling;
-}
-
-#endif  // !HAVE_LIBUDEV
-
 /*
  *  (C)Copyright 2005-2024, RW Penney
  */
